moved to javamail 1.4, jdk 1.6.

revamped Configuration UI; moved all main configuration properties to a single
  Edit-Preferences dialog.

switched default icon set to Linspire CrystalClear

Pooka now uses system browser by default for URLs.

added unread message count to folder node.

added htmlparser library to handle replies to html-only email.

updated TrayIcon settings; we now get a nicer dialog for opening new 
messages.

made the remove-self-from-reply-all code case-insensitive.

opening a message by keypress was incorrectly happening on the AwtEventThread.

fixed up error display messages.

removed ability to connect to self-signed SSL providers due to incompatibility
with WebStart.  this may be restored in the future.

060227 release
--------------

in the folder file chooser, double-clicking on a folder that holds only
messages (no other folders) now selects the folder, rather than opening it.

fixed a bug with subscribing to subfolders of stores where the subfolder 
would get the subscription, but the sub-subfolder wouldn't.

you can now subscribe to multiple folders at once.

added a new icon set, and added in an IconManager to allow for changeable
icon sets.  set IconManager._default=IconSet.crystalclear to see the new
icon set.  this will most likely be the default iconset for release 2.0

fixed a javamail-crypto bug in which missing classes can cause 
getEncryptionUtils() to throw an uncaught error.

messages from sent folders should show up properly in search folders now.
also, empty values should now show up as blank rather than as 'loading...'.

changed the select-first-unread code so that it handles cases where the
server returns a bogus unread count.

changed the default font under windows to something a bit more readable.

if autoCache is set, you now connect to the folder and show the messages
before you start to download the messages to cache them.

added a way to save all the attachments on a message at once.
